fixed faq on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1722,7 +1722,7 @@ section#s{
 }
   .panel-group{
     margin-bottom: 20px;
-    margin-left: 0px;
+    margin-left: 10%;
   }
 
   .title-responsive{
